@@ -1,3 +1,9 @@
+2007-01-06  David Hansen  <david.hansen@physik.fu-berlin.de>
+
+	* shimbun/sb-fau.el (shimbun-fau-x-face-alist): Quote bracket in
+	column one.
+	(shimbun-fau-content-end): Relaxed.
+
 2007-01-05  David Hansen  <david.hansen@physik.fu-berlin.de>
 
 	* shimbun/sb-the-register.el (shimbun-make-contents): Improve junk
